--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,10 @@ This files table contents are outlined below>>>>>
 /*================================================
 Default CSS
 =================================================*/
+
+@import '/node_modules/bootstrap/dist/css/bootstrap.css';
+@import '/node_modules/bootstrap/dist/css/bootstrap.min.css';
+
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
 body {
   padding: 0;
